--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_discard">Discard</string>
 
+    <!--Base application - units -->
+    <string name="unit_kg" translatable="false">kg</string>
+    <!--Base application - placeholders -->
+    <string name="placeholder_number_zero" translatable="false">0</string>
 
     <!-- SCREEN SECTION -->
     <!--Home Screen-->
@@ -17,26 +21,47 @@
 
     <!--Create Bag Screen-->
     <string name="title_screen_create_bag">New bag</string>
-
     <string name="edit_text_hint_bag_name">Bag name</string>
     <string name="edit_text_description_bag_name">Delete bag name</string>
-
     <string name="edit_text_hint_bag_date">Travel date</string>
     <string name="edit_text_description_bag_date">Delete travel date</string>
-
     <string name="edit_text_hint_bag_weight">Total weight (kg)</string>
     <string name="edit_text_description_bag_weight">Delete total weight</string>
-
     <string name="edit_text_hint_bag_comment">Add comment</string>
     <string name="edit_text_description_bag_comment">Delete comment</string>
-
     <string name="fab_text">Save</string>
     <string name="fab_description">Save bag</string>
-
     <string name="text_view_reminder">No reminders</string>
     <string name="ic_reminder_description">Reminder icon</string>
     <string name="ic_calendar_description">Calendar icon</string>
     <string name="ic_add_comment_description">Add comment icon</string>
 
+    <!--List Bag Screen-->
+    <string name="title_screen_list_bag" translatable="false">List bag</string>
+    <string name="label_bag_name" translatable="false">Bag name</string>
+    <string name="label_bag_date" translatable="false">Bag date</string>
+    <string name="label_bag_weigth" translatable="false">Bag weight</string>
+    <string name="label_bag_item" translatable="false">item</string>
+    <string name="label_bag_items" translatable="false">items</string>
+    <string name="label_add_item" translatable="false">Add item</string>
+
+    <!--Create Item Screen-->
+    <string name="title_screen_create_item" translatable="false">Add item</string>
+    <string name="edit_text_hint_item_name" translatable="false">Name</string>
+    <string name="edit_text_description_item_name" translatable="false">Delete item name</string>
+    <string name="edit_text_hint_item_quantity" translatable="false">Quantity</string>
+    <string name="edit_text_description_item_quantity" translatable="false">Delete item quantity</string>
+    <string name="edit_text_hint_item_weight" translatable="false">Weight (kg)</string>
+    <string name="edit_text_description_item_weight" translatable="false">Delete item weight</string>
+    <string name="textView_ic_arrow_right_red" translatable="false">Need to buy</string>
+    <string name="textView_ic_arrow_right_green" translatable="false">Already have</string>
+
+    <!--List Item Screen-->
+    <string name="title_screen_list_item" translatable="false">Items</string>
+    <string name="label_item_quantity" translatable="false">Quantity:</string>
+    <string name="label_item_number" translatable="false">number</string>
+    <string name="label_item_weight" translatable="false">Weight (kg):</string>
+    <string name="label_item_number_weight" translatable="false">number weight</string>
+    <string name="imageview_description_status" translatable="false">status image</string>
 
 </resources>
