--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
 
     <!-- SCREEN SECTION -->
     <!--Home Screen-->
-    <string name="welcome_packstar">Welcome!</string>
+    <string name="welcome_packstar">Going on an adventure?</string>
     <string name="create_first_bag">Create your first bag by tapping the\nplus button</string>
 
     <!--Create Bag Screen-->
