--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="placeholder_number_zero" translatable="false">0</string>
     <!--Base application - snackbars -->
     <string name="snackbar_undo" translatable="false">UNDO</string>
+    <string name="snackbar_item_deleted" translatable="false">Item deleted</string>
+
 
 
     <!-- SCREEN SECTION -->
