Translation to Estonian. Added snackbar list item screen and edit item screen

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -76,4 +76,10 @@
     <string name="menu_chip_already_have">Juba olemas</string>
     <string name="menu_chip_remove">Eemalda</string>
 
+    <!--Base application - snackbars -->
+    <string name="snackbar_undo">TÜHISTA</string>
+    <string name="snackbar_item_deleted">Toode kustutatud</string>
+
+    <!--Create Item Screen-->
+    <string name="title_screen_edit_item">Muuda toodet</string>
 </resources>
