--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,6 @@
     <string name="snackbar_item_deleted">Item deleted</string>
 
 
-
     <!-- SCREEN SECTION -->
     <!--Home Screen-->
     <string name="welcome_packstar">Going on an adventure?</string>
@@ -74,7 +73,7 @@
     <string name="menu_chip_need_to_buy">Need to buy</string>
     <string name="menu_chip_already_have">Already have</string>
     <string name="menu_chip_remove">Remove</string>
-
+    <string name="menu_chip_updated_item" translatable="false">Status updated</string>
 
     <!--Create Item Screen-->
     <string name="title_screen_edit_item">Edit item</string>
