List Bag - Popup Menu - delete - added delete message from resources instead of hard coded one.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="menu_dots_edit">Edit</string>
     <string name="menu_dots_delete">Delete</string>
     <string name="menu_dots_share">Share</string>
+    <string name="list_bag_popup_delete" translatable="false">Bag deleted</string>
 
     <!--Create Item Screen-->
     <string name="title_screen_create_item">Add item</string>
