--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -46,6 +46,7 @@
     <string name="menu_dots_edit">Muuda</string>
     <string name="menu_dots_delete">Kustuta</string>
     <string name="menu_dots_share">Jaga</string>
+    <string name="list_bag_popup_delete">Reisikott kustutatud</string>
         
     <!--Create Item Screen-->
     <string name="title_screen_create_item">Lisa toode</string>
