--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_discard">Discard</string>
 
+    <!--Base application theme - Discard Dialog-->
+    <string name="dialog_ok" translatable="false">OK</string>
+
     <!--Base application - units -->
     <string name="unit_kg" translatable="false">kg</string>
     <!--Base application - placeholders -->
@@ -52,6 +55,7 @@
     <string name="menu_dots_delete">Delete</string>
     <string name="menu_dots_share">Share</string>
     <string name="list_bag_popup_delete">Bag deleted</string>
+    <string name="list_bag_comment_empty" translatable="false">No comments. To add one, just edit your bag.</string>
 
     <!--Create Item Screen-->
     <string name="title_screen_create_item">Add item</string>
