--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="menu_dots_delete">Delete</string>
     <string name="menu_dots_share">Share</string>
     <string name="list_bag_popup_delete">Bag deleted</string>
-    <string name="list_bag_comment_empty" translatable="false">No comments. To add one, just edit your bag.</string>
+    <string name="list_bag_comment_empty">No comments. To add one, just edit your bag</string>
 
     <!--Create Item Screen-->
     <string name="title_screen_create_item">Add item</string>
