--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="dialog_ok" translatable="false">OK</string>
 
     <!--Base application theme - Discard Dialog-->
-    <string name="dialog_reminder_title" translatable="false">Which action would you like to take?</string>
-    <string name="dialog_reminder_edit" translatable="false">Edit</string>
-    <string name="dialog_reminder_delete" translatable="false">Delete</string>
+    <string name="dialog_reminder_title">Which action would you like to take?</string>
+    <string name="dialog_reminder_edit">Edit</string>
+    <string name="dialog_reminder_delete">Delete</string>
 
     <!--Base application - units -->
     <string name="unit_kg" translatable="false">kg</string>
@@ -49,16 +49,16 @@
     <string name="ic_reminder_description">Reminder icon</string>
     <string name="ic_calendar_description">Calendar icon</string>
     <string name="ic_add_comment_description">Add comment icon</string>
-    <string name="alert_create_bag_name_required" translatable="false">Please, enter Bag name</string>
-    <string name="alert_create_bag_date_required" translatable="false">Please, enter Bag date</string>
-    <string name="reminder_create_bag_invalid_time" translatable="false">Invalid time. Please, set future reminder time</string>
-    <string name="reminder_create_bag_trip_is_coming" translatable="false">Your trip is coming soon</string>
-    <string name="reminder_create_bag_add_success" translatable="false">Success! Your reminder was added to your calendar</string>
-    <string name="reminder_create_bag_update_success" translatable="false">Success! Your reminder was updated in your calendar</string>
-    <string name="reminder_create_bag_delete_success" translatable="false">Success! Your reminder was deleted</string>
-    <string name="reminder_create_bag_update_delete_failure" translatable="false">Calendar not found, create new one</string>
-    <string name="reminder_permission_read_write" translatable="false">Read/Write calendar permission is needed to create reminders</string>
-    <string name="reminder_none" translatable="false">No reminders</string>
+    <string name="alert_create_bag_name_required">Enter Bag name</string>
+    <string name="alert_create_bag_date_required">Enter trip date</string>
+    <string name="reminder_create_bag_invalid_time">Invalid time. Please, set future reminder time</string>
+    <string name="reminder_create_bag_trip_is_coming">Your trip is coming soon</string>
+    <string name="reminder_create_bag_add_success">Success! Your reminder was added to your calendar</string>
+    <string name="reminder_create_bag_update_success">Success! Your reminder was updated in your calendar</string>
+    <string name="reminder_create_bag_delete_success">Success! Your reminder was deleted</string>
+    <string name="reminder_create_bag_update_delete_failure">Entry not found, create new one</string>
+    <string name="reminder_permission_read_write">Read/Write calendar permission is needed to create reminders</string>
+    <string name="reminder_none">No reminders</string>
 
 
     <!--List Bag Screen-->
